Fixed bugs in RmiClient and RmiServer, now it handles correctly multiple players trying to join multiple games